@@ -2,4 +2,15 @@
 #import "PBXFrameworkTarget.h"
 
 @implementation PBXFrameworkTarget
+
+- (id) init
+{
+  self = [super init];
+  if(self)
+    {
+      [self setProductType: FRAMEWORK_TYPE];
+    }
+  return self;
+}
+
 @end
